--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build website
         run: npm run build
       - name: upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dist-files
           path: |
@@ -36,5 +36,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: download artifact
+        uses: actions/download-artifact@v4
+      - name: list content
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
