--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
       - name: get JS file name
         id: get_file_name
-        run: find dist/assests/*.js type f -execdir echo 'script-file={}'>> GITHUB_OUTPUT ';'
+        run: find dist/assests/*.js -type f -execdir echo 'script-file={}'>> $GITHUB_OUTPUT ';'
       - name: upload artifacts
         uses: actions/upload-artifact@v4
         with:
